posts alignment fix

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -66,12 +66,13 @@ body {
 }
 
 .service-list {
-  display: flex-start;
+  display: flex;   
   flex-wrap: wrap;
-  align-items:center;
   gap: 20px;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start; 
 }
+
 
 .reviews {
   margin-top: 20px;
